hamlで空白と改行を削除するようにした

--- a/ruby/views/channel.haml
+++ b/ruby/views/channel.haml
@@ -1,10 +1,10 @@
-.well= @description
+.well<>= @description
 #timeline
 - if user
-  .row
-    #chatbox-frame.col-sm-9.col-md-9
-      .input-group.chatbox
-        %textarea#chatbox-textarea.form-control{:rows => "3"}
-        %span.input-group-btn
-          %button.btn.btn-primary{:onclick => "on_send_button()"} 送信
-%script{:src => "/js/chat.js", :type => "text/javascript"}
+  .row<>
+    #chatbox-frame.col-sm-9.col-md-9<>
+      .input-group.chatbox<>
+        %textarea#chatbox-textarea.form-control{:rows => "3"}<>
+        %span.input-group-btn<>
+          %button.btn.btn-primary{:onclick => "on_send_button()"}<> 送信
+%script{:src => "/js/chat.js", :type => "text/javascript"}<>
