--- a/ruby/views/index.haml
+++ b/ruby/views/index.haml
@@ -1,10 +1,10 @@
-%h1 ようこそ Isubata へ。
-%p Isubata は世界最速のチャットアプリケーションです。
-%p
+%h1<> ようこそ Isubata へ。
+%p<> Isubata は世界最速のチャットアプリケーションです。
+%p<>
   利用を開始するには
-  %a{:href => "/login"}> ログイン
+  %a{:href => "/login"}<> ログイン
   してください。
-%p
+%p<>
   アカウントをお持ちでない場合は
-  %a{:href => "/register"}> 新規登録
+  %a{:href => "/register"}<> 新規登録
   してください。
